<resources>

    <string name="bot_lvl_up">%1$S choose to increase %2$S</string>
    <string name="lvlup_text">What stat do you want to raise? I choose wisely.</string>
    <string name="level_up">Level up!</string>
    <string name="gold_top">Gold 100</string>
    <string name="app_name">Knights Tale</string>
    <string name="hp_bar">%1$S/%2$S</string>
    <string name="location">You came to the .............</string>
    <string name="roll_cube">Roll a cube</string>
    <string name="back_to_map">Back to map!</string>
    <string name="game_over">Game Over</string>
    <string name="title_over">Your life ends here.</string>
    <string name="experience">Exp %1$S/%2$S</string>
    <string name="bot_dead">%1$S life ends here, but tale go on</string>
    <string name="dead_end">dead</string>
    <string name="winner">You are winner!</string>
    <string name="celebrate">I will drink a wine for their souls</string>

    <!--secret area-->
    <string name="secret_title">You came to the strange place. You try to describe your feeling…</string>
    <string name="secret_info">The epicenter of the outgoing force is near the stone under the
        destroyed window. Maybe it is a gravestone. You think that you should touch the stone, maybe it will
        help me to decide on the action.</string>
    <string name="secret_btn">You decided to touch the stone</string>
    <string name="secret_btn_bot">%1$S decided to touch the stone</string>
    <string name="secretExit_btn">You don`t want to risk</string>
    <string name="bot_no_risk">%1$S don`t want to risk</string>
    <string name="choice">You make your choice</string>


    <!--jail info-->
    <string name="bot_no_luck">No luck for %1$S, he can`t escape today. Your numbers is %2$S, %3$S and %4$S.</string>
    <string name="bot_got_lucky">%1$S manage to escape!! Good luck for him.</string>
    <string name="jain_info">You are in jail now. This world is not fair.</string>
    <string name="jail_action">You do not have time to prove your innocence. Only luck will help
        you escape from prison(To roll a cube to six), for one move you can roll a cube three times.
        If you fail, you will loose some hp. You might be here till death. So Odin be supportive
        to you today</string>

    <!--Create hero text-->
    <string name="continue_game">Continue</string>
    <string name="start">Start</string>
    <string name="exit">exit</string>
    <string name="options">options</string>
    <string name="faq">FAQ</string>

    <!--Create hero text-->
    <string name="bot_result_fight_win">%1$S damaged monster for %2$S and get damage %3$S. </string>
    <string name="bot_lost_fighting">%1$S is dead</string>
    <string name="player1">Player1</string>
    <string name="bot1">Bot1</string>
    <string name="bot2">Bot2</string>
    <string name="image">image</string>
    <string name="begin_adventure">Begin adventure</string>
    <string name="name">Input name of your hero:</string>
    <string name="name_toast">Input name of your hero</string>
    <string name="name_hint">Input name of your hero here</string>
    <string name="vitality">Vitality: </string>
    <string name="strength">Strength: </string>
    <string name="agility">Agility: </string>
    <string name="focus">Focus: </string>
    <string name="default_stat">10</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="set_start">Stats distributed and ready to fight</string>
    <string name="ten">    10</string>
    <string name="stats_left">Stats left:  </string>
    <string name="bot_add1">Computer player1</string>
    <string name="bot_add2">Computer player2</string>
    <string name="bot_name">Input bot name:</string>
    <string name="no_free_stats">No free stats</string>
    <string name="stats_limit">Stat`s can`t be less then 2</string>

    <!--Text action for houses-->
    <string name="home">%1$S get some rest at %2$S</string>
    <string name="you_pay_for_path">%1$S pay for pass %2$S</string>
    <string name="bot_buy_house">%1$S bought %2$S</string>
    <string name="your_house">This is your house</string>
    <string name="action1">Runaway</string>
    <string name="action2">Fight</string>
    <string name="action3">Pay to pass</string>
    <string name="buy_outpost">Buy (20 gold)</string>
    <string name="buy_tavern">Buy (27 gold)</string>
    <string name="buy_eagle">Buy (35 gold)</string>
    <string name="buy_fortress">Buy (42 gold)</string>
    <string name="buy_castle">Buy (50 gold)</string>
    <string name="no_money">Not enough gold</string>
    <string name="action_buy">Buy this place for %1$S</string>
    <string name="at_home">You at home sir %1$S , wellcome back! Take a rest!</string>
    <string name="what_house">You see %1$s and you go in</string>
    <string name="path">Your way has brought somewhere</string>

    <!--SHOP-->
    <string name="nothing_bought">%1$S don`t want to buy anything</string>
    <string name="strength_shop">strength</string>
    <string name="vitality_shop">vitality</string>
    <string name="agility_shop">agility</string>
    <string name="focus_shop">focus</string>
    <string name="nothing">I don`t want to spend my money for your fantasy, goodbye!</string>
    <string name="buy_stat">%1$S bought potion of %2$S and he got overall %3$S</string>
    <string name="shop_text">Hello adventurer, i can sell you some magic potion for 50 gold. Each time you came, you can bought one potion per round. Bless you with beard of almighty Merlin</string>
    <string name="shop_magic">Shop magic</string>
    <string name="vitality_potion">Gain vitality +</string>
    <string name="strength_potion">Gain strength +</string>
    <string name="agility_potion">Gain agility +</string>
    <string name="focus_potion">Gain focus +</string>

    <!--Houses-->
    <string name="tavern">Tavern "Small pony"</string>
    <string name="outpost">Outpost on the river</string>
    <string name="shop">Shop</string>
    <string name="secretArea">Secret Area</string>
    <string name="jail">Jail</string>
    <string name="tower">Eagle tower</string>
    <string name="fortress">Fortress</string>
    <string name="arena">Arena</string>
    <string name="castle">Castle "Black Stone"</string>

    <!--Test-->
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="maybe">maybe</string>
    <string name="message_text">Outpost</string>

    <!--Arena-->
    <string name="not_today_bot">%1$S decided to go elsewhere</string>
    <string name="fight_medium_bot">%1$S decided to fight with medium enemy</string>
    <string name="fight_hard_bot">%1$S decided to fight with strong enemy</string>
    <string name="arena_message">You hear a roars and furious cries. No doubt, this is an arena.
        Where brave warriors can get rich or meet their death with honor</string>
    <string name="arena_title">Famous place with1 a lot of people. You can fight with strongest
        enemy and take huge amount of money</string>
    <string name="stop_fight">You decided to go elsewhere</string>
    <string name="average_monster">Average enemy</string>
    <string name="strong_monster">Strong enemy</string>
    <string name="easy_monster">Easy enemy</string>
    <string name="arena_reject">Not today</string>

    <!--LVL UP-->
    <string name="vitalityUp">+Vit</string>
    <string name="strengthUp">+Str </string>
    <string name="agilityUp">+Agi</string>
    <string name="focusUp">+Foc</string>

    <!--FIGHT-->
    <string name="critical_strike">%1$S hits critical strike for %2$S !</string>
    <string name="evasion_critical_strike">%1$S dodged a critical strike</string>
    <string name="evasion">%1$S dodged attack from his opponent</string>
    <string name="hit">%1$S smash for %2$S damage</string>
    <string name="next_round">Next round!</string>
    <string name="draw"> Draw! They all dead! </string>
    <string name="dead">%1$S dead! Winner %2$S! Congratulation !</string>


    <!--Bridge-->
    <string name="buy_place">Buy this place</string>
    <string name="break_through">Break through</string>
    <string name="pay_pass">Pay to pass</string>


    <!--FAQ-->
    <string name="vitality_info"><b>*Vitality</b> - gives huge amount of hp and small amount of damage.</string>
    <string name="strength_info"><b>*Strength</b> - gives huge amount of damage and small amount of hp.</string>
    <string name="agility_info"><b>*Agility</b> - gives ability to evasion more effective, increase chance to run away.</string>
    <string name="focus_info"><b>*Focus</b> - increase chance to hit critical strike.</string>

    <!--Options -->
    <string name="music">Music On/Off</string>
    <string name="sound">Sound Effects On/Off</string>
    <string name="vibration">Vibration On/Off</string>

</resources>
