<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/top_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginBottom="@dimen/bottom"
        android:layout_gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/btnMainStart"
        android:text="@string/start"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:onClick="OnClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/btnContinue"
        android:text="@string/continue_game"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:onClick="OnClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/btnOptions"
        android:text="@string/options"
        android:textStyle="bold"
        android:textSize="@dimen/text_size"
        android:onClick="OnClick"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/text_size"
        android:id="@+id/btnFaq"
        android:textStyle="bold"
        android:text="@string/faq"
        android:onClick="OnClick"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/text_size"
        android:id="@+id/btnExit"
        android:text="@string/exit"
        android:textStyle="bold"
        android:onClick="OnClick"/>


</LinearLayout>