<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:gravity="center"
        android:shadowColor="@color/Black"
        android:shadowDx="-2"
        android:shadowDy="-2"
        android:shadowRadius="2"
        android:text="@string/shop_magic"
        android:textColor="@color/text_shadow_white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:gravity="center"
        android:shadowColor="@color/Black"
        android:shadowDx="-2"
        android:shadowDy="-2"
        android:shadowRadius="2"
        android:text="@string/shop_text"
        android:textColor="@color/text_shadow_white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnStrength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strength_potion" />

        <Button
            android:id="@+id/btnVitality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/vitality_potion" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnAgility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/agility_potion" />

        <Button
            android:id="@+id/btnFocus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/focus_potion" />

    </LinearLayout>

</LinearLayout>