<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/secret">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secret_title"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/text_shadow_white"
        android:shadowColor="@color/Black"
        android:shadowDx="-2"
        android:shadowDy="-2"
        android:shadowRadius="2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secret_info"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/text_shadow_white"
        android:shadowColor="@color/Black"
        android:shadowDx="-2"
        android:shadowDy="-2"
        android:shadowRadius="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:id="@+id/btnPlay"
            android:tag="play"
            android:layout_weight="1"
            android:text="@string/secret_btn"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_height="100dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:tag="away"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/secretExit_btn"
            android:id="@+id/btnExit"
            />





    </LinearLayout>



</LinearLayout>